--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,22 @@
 {
   "name": "webmasterskaya/base-soap-lib",
+  "description": "Набор базовых классов для построения PHP-SOAP приложения, совместимый с PHP 7.1",
+  "type": "library",
+  "license": "MIT",
   "autoload": {
     "psr-4": {
       "Webmasterskaya\\Soap\\Base\\": "src/"
     }
   },
+  "authors": [
+    {
+      "name": "Artem Vasilev",
+      "email": "dev@webmasterskaya.xyz"
+    }
+  ],
   "require": {
-    "ext-dom": "*",
+    "php": ">=7.1",
     "php-soap-backports/ext-soap-engine": "^1.4",
-    "ext-soap": "*"
+    "symfony/options-resolver": "^4.4"
   }
 }
