--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
-/.github            export-ignore
-tools/              export-ignore
-tools/*             binary
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
+/.github                    export-ignore
+tools/                      export-ignore
+tools/*                     binary
+/.gitattributes             export-ignore
+/.gitignore                 export-ignore
+/.php-cs-fixer.dist.php     export-ignore
