--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"php-soap/engine": "^2.13",
 		"php-soap/ext-soap-engine": "^1.7",
 		"php-soap/wsdl": "^1.12",
-		"symfony/options-resolver": "^5.4"
+		"symfony/options-resolver": "^5.4",
+		"psr/event-dispatcher": "^1.0"
 	},
 	"require-dev": {
 		"friendsofphp/php-cs-fixer": "^3.65",
