--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,47 @@
 {
-	"name": "webmasterskaya/base-soap-lib",
-	"description": "Набор базовых классов для построения PHP-SOAP приложения, совместимый с PHP 7.1",
-	"type": "library",
-	"license": "MIT",
-	"autoload": {
-		"psr-4": {
-			"Webmasterskaya\\Soap\\Base\\": "src/"
-		}
-	},
-	"authors": [
-		{
-			"name": "Artem Vasilev",
-			"email": "dev@webmasterskaya.xyz"
-		}
-	],
-	"require": {
-		"php": "~8.2.0 || ~8.3.0 || ~8.4.0",
-		"azjezz/psl": "^3.1",
-		"php-soap/engine": "^2.13",
-		"php-soap/ext-soap-engine": "^1.7",
-		"php-soap/wsdl": "^1.12",
-		"symfony/options-resolver": "^5.4",
-		"psr/event-dispatcher": "^1.0"
-	},
-	"require-dev": {
-		"friendsofphp/php-cs-fixer": "^3.65",
-		"vimeo/psalm": "^5.26"
-	},
-	"scripts" : {
-		"cs": [
-			"php-cs-fixer fix --ansi --dry-run --diff"
-		],
-		"cs-fix": [
-			"php-cs-fixer fix --ansi"
-		],
-		"psalm" : [
-			"psalm"
-		]
-	}
+  "name": "webmasterskaya/base-soap-lib",
+  "description": "Набор базовых классов для построения PHP-SOAP приложения, совместимый с PHP 7.1",
+  "type": "library",
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "Webmasterskaya\\Soap\\Base\\": "src/"
+    }
+  },
+  "authors": [
+    {
+      "name": "Artem Vasilev",
+      "email": "dev@webmasterskaya.xyz"
+    }
+  ],
+  "require": {
+    "php": "~8.2.0 || ~8.3.0 || ~8.4.0",
+    "azjezz/psl": "^3.0",
+    "php-soap/cached-engine": "~0.3",
+    "php-soap/engine": "^2.14.0",
+    "php-soap/encoding": "~0.15",
+    "php-soap/psr18-transport": "^1.7",
+    "php-soap/wsdl-reader": "~0.21",
+    "psr/event-dispatcher": "^1.0",
+    "symfony/http-client": "^7.3"
+  },
+  "require-dev": {
+    "nyholm/psr7": "^1.8",
+    "friendsofphp/php-cs-fixer": "^3.65",
+    "symfony/cache": "^6.4 || ^7.0"
+  },
+  "scripts": {
+    "cs": [
+      "php-cs-fixer fix --ansi --dry-run --diff"
+    ],
+    "cs-fix": [
+      "php-cs-fixer fix --ansi"
+    ]
+  },
+  "config": {
+    "sort-packages": true,
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
+  }
 }
